--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -1,26 +1,24 @@
 {
-    "name": "blackcodeweblog/weblog",
-    "type": "project",
-    "autoload": {
-        "psr-4": {
-            "App\\": "App/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Mahdi Shahi",
-            "email": "mahdishahipro@gmail.com"
-        }
-    ],
-    "require-dev": {
-        "phpunit/phpunit": "11"
-    },
-    "require": {
-        "catfan/medoo": "^2.1"
+  "name": "blackcodeweblog/weblog",
+  "type": "project",
+  "autoload": {
+    "psr-4": {
+      "App\\": "App/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Mahdi Shahi",
+      "email": "mahdishahipro@gmail.com"
+    }
+  ],
+  "require-dev": {
+    "phpunit/phpunit": "11"
+  },
+  "require": {}
 }
